Updated ControlRouteSuitability SysML model. Added first version of FilterInformationFromERTMSTrackside SysML model.

--- a/System Analysis/Papyrus_SysML_ProR_Model/SRS_Analysis/.project
+++ b/System Analysis/Papyrus_SysML_ProR_Model/SRS_Analysis/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>SRS_Analysis_2</name>
+	<name>SRS_Analysis</name>
 	<comment></comment>
 	<projects>
 	</projects>
