Follows preceding reorganization: Moved first draft of SysML/ProR model in a more appropriate folder.

--- a/EVC-Kernel_Model/.project
+++ b/EVC-Kernel_Model/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>SRS_Analysis</name>
+	<name>EVC-Kernel_Model</name>
 	<comment></comment>
 	<projects>
 	</projects>
