--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,5 @@
 System Analysis/WorkingRepository/Group1/~$FilterInformationFromERTMSTrackside.xlsx
 System Analysis/WorkingRepository/Group1/images/Thumbs.db
+System Analysis/WorkingRepository/Group1/~$ControlRouteSuitability.xlsx
+System Analysis/WorkingRepository/Group1/~$oreConfigurationData.docx
+System Analysis/WorkingRepository/Group1/~$StoreConfigurationData.xlsx
